Corrected the unwanted horizontal scrolling due to the Parallax effect.

--- a/docs/css/style.production.css
+++ b/docs/css/style.production.css
@@ -652,7 +652,7 @@ body {
 
 .slide:before {
   content: "";
-  position: absolute;
+  /* position: absolute;  */
   top: 0;
   bottom: 0;
   left: 0;
